# stackchan-embodied

./: .gitignore  README.md
body-client/: pyproject.toml
body-client/examples/: wave_hello.py
body-client/stackchan_body/: __init__.py  auth.py  client.py  expressions.py  protocol.py
body-client/tests/: test_expressions.py  test_integration.py  test_protocol.py
capabilities/: README.md
deploy/: README.md  env.example
deploy/brain-router/: brain_router.py
deploy/console/: console_server.py  index.html  status_api.py
deploy/litellm/: config.yaml
deploy/systemd/: stackchan-brainrouter.service  stackchan-console.service  stackchan-goserver.service  stackchan-litellm.service  stackchan-watcher.service  stackchan-xiaozhi.service
deploy/uswest/: README.md
deploy/xiaozhi-server/: check_work.py  goudan_push.py  run_with_push.py  test_e2e.py
docs/: ARCHITECTURE.md  QUICKSTART.md  ROADMAP.html  bug-dialog-stuck.md  delivery-20260710.md  eye-compare.html  face-simulator.html  firmware-repoint.md  firmware-verification.md  flash-guide.html  operator-guide.md  skin-gallery.html
firmware/: README.md  sdkconfig.defaults.local
firmware/build-artifacts/: SHA256SUMS  flash_args
firmware/face-detect/: README.md  assets.h  face_event.h  hal_face_detect.cpp  partitions.csv  stackchan_camera.cc.snippet  stackchan_camera.h.ref
firmware/host-verify/: face_fmt_test.cpp  face_follow_test.cpp  face_hysteresis_test.cpp  greet_gate_test.cpp  harness.cpp  (+2 more)
scripts/: deploy.sh  health-check.sh
tools/: check_simulator_sync.py  diag-boot.sh  diag-serial.sh
(+30 files in other folders)
