[project]
name = "stackchan-body"
version = "0.1.0"
description = "Drive a StackChan robot body via the self-hosted StackChan Go server WS relay"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stackchan_body"]
